2005-08-31  Derek Price  <derek@ximbiot.com>

	* NEWS: Note configurable config file path.
	* configure.in (--enable-config-override): New option.

2005-08-30  Larry Jones  <lawrence.jones@ugs.com>

	* NEWS: Note import locking fix.

2005-08-29  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new verifymsg %{sV} format strings.

2005-08-04  Derek Price  <derek@ximbiot.com>

	* NEWS: Move 1.12 change from BUG FIXES to NEW FEATURES and rephrase.
	Correct spelling error in different entry.

2005-07-20  Derek Price  <derek@ximbiot.com>

	* AUTHORS, HACKING, README, cvs.spec.in:
	s/cvshome.org/nongnu.org.etc.../.
	* DEVEL-CVS: Ditto.  Remove devel-cvs mailing list charter.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* FAQ, HACKING, INSTALL: Add copyright notices.

2005-07-11  Derek Price  <derek@ximbiot.com>

	* FAQ, HACKING, INSTALL-CVS: Update license notices.

2005-06-15  Derek Price  <derek@ximbiot.com>

	* build-aux/missing: Add hack to fail gracefully when Bison is too old.

2005-06-15  Derek Price  <derek@ximbiot.com>

	* HACKING: Note GNU Bison 1.875 requirement.

2005-06-12  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add file "lstat.h" to project.
	* cvsnt.dep: Regenerate for "cvsnt.dsp" change.

2005-06-10  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Remove stat module.

2005-06-10  Mark D. Baushke  <mdb@cvshome.org>

	* HACKING: Add a few more guidelines.  Adjust examples for switch
	labels.  Fix some spelling mistakes.
	* cvs-format.el (c-label-offset, case-label): Adjust indentation
	to agree with changes in the HACKING document.
	
2005-06-03  Derek Price  <derek@ximbiot.com>

	* HACKING: Remove `!= NULL' in example conditional.

2005-06-03  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new server compression limit config options.  Correct
	HistorySearchPath name.

2005-06-02  Derek Price  <derek@ximbiot.com>

	* NEWS: Note server compression hang fix.

2005-06-01  Derek Price  <derek@ximbiot.com>
